# MIS_Management_System

./: .gitignore  ad.py  ap.py  final_address_output.xlsx  opr.py  output_addresses_fixed.xlsx  t3_address _locality.xlsx
client/: .gitignore
client/Audit_trips/: Audit_trips.css
client/B2BCorner/: b2b_corner.html
client/Components/: Sidebar.css  Sidebar.js
client/DataCleaner/: Datacleaner.css  Datacleaner.html  Datacleaner.js
client/GPSCorner/: gps_corner.html
client/LocalityCorner/: Localitycorner.html
client/OperationManager/: operation_manager.css  operation_manager.html
client/TollRoutes/: audit_toll.html
client/Toll_routes/: audit_toll.html
client/gps_corner/: gps_corner.css  gps_corner.html
server/: .gitignore  admin.py  database.py  main.py  models.py  pyproject.toml  reset_db.py
server/api/: b2b_api.py  cleaner_api.py  download_api.py  gps corner_api_.py  gps_api.py  locality_api.py  page_route_api.py  toll_api.py
server/cleaner/: cleaner_helper.py  fastag_data_cleaner.py  mis_data_cleaner.py  operation_data_cleaner.py
